test file creation, bug insertion, up makefile

--- a/level3_design/Makefile
+++ b/level3_design/Makefile
@@ -4,10 +4,10 @@ TOPLEVEL_LANG ?= verilog
 
 PWD=$(shell pwd)
 
-VERILOG_SOURCES = $(PWD)/               # provide your design path
+VERILOG_SOURCES = $(PWD)/ca_prng.v               # provide your design path
 
-TOPLEVEL :=           # design file
-MODULE   :=     # test file
+TOPLEVEL := ca_prng          # design file
+MODULE   := test_ca_prng    # test file
 
 include $(shell cocotb-config --makefiles)/Makefile.sim
 
